[css] detalhes do scrollbar || [js] consertos de bugs

--- a/main.css
+++ b/main.css
@@ -324,7 +324,7 @@
 }
 
 ::-webkit-scrollbar {
-    width: 12px;
+    width: 1.5vw;
 }
  
 ::-webkit-scrollbar-track {
